--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
   <div class="col d-flex justify-content-center">
-    <div class="card" style="width: 40rem;">
+    <div class="card text-bg-warning" style="width: 40rem;">
       <div class="card-body">
         {% if post.image %}
           <a href="{{ post.image.url }}" target="_blank">
@@ -28,10 +28,10 @@
         <p class="card-text">{{ post.text|linebreaksbr }}</p>
         {% if user == post.author %}
         <div class="mt-3">
-          <a href="{% url 'blog:edit_post' post.id %}" class="btn btn-sm btn-primary">
+          <a class="btn btn-outline-dark" href="{% url 'blog:edit_post' post.id %}" class="btn btn-sm btn-primary">
             Редактировать пост
           </a>
-          <a href="{% url 'blog:delete_post' post.id %}" class="btn btn-sm btn-danger">
+          <a class="btn btn-outline-dark" href="{% url 'blog:delete_post' post.id %}" class="btn btn-sm btn-danger">
             Удалить пост
           </a>
         </div>
