--- a/blogicum/templates/blog/profile.html
+++ b/blogicum/templates/blog/profile.html
@@ -13,8 +13,8 @@
     <ul class="list-group list-group-horizontal justify-content-center">
       {% if user.is_authenticated and user == profile %}
       <div class="mb-3">
-        <a href="{% url 'blog:profile_edit' profile.username %}">Редактировать профиль</a>
-        <a href="{% url 'password_change' %}" class="btn btn-sm btn-secondary">
+        <a class="btn btn-sm btn-warning" href="{% url 'blog:profile_edit' profile.username %}">Редактировать профиль</a>
+        <a class="btn btn-sm btn-warning" href="{% url 'password_change' %}">
           Изменить пароль
         </a>
       </div>
