--- a/blogicum/templates/blog/profile_edit.html
+++ b/blogicum/templates/blog/profile_edit.html
@@ -3,6 +3,6 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Сохранить</button>
+  <button class="btn btn-sm btn-warning" type="submit">Сохранить</button>
 </form>
 {% endblock %}
