--- a/blogicum/templates/registration/password_change_done.html
+++ b/blogicum/templates/registration/password_change_done.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="col d-flex justify-content-center">
-    <div class="card" style="width: 40rem;">
+    <div class="card text-bg-warning" style="width: 40rem;">
       <div class="card-header">
         Пароль успешно изменён!
       </div>
       <div class="card-body">
-        <p><a href="{% url 'blog:index' %}">На главную</a></p>
+        <p><a class="nav-link link-light text-dark" href="{% url 'blog:index' %}">На главную</a></p>
       </div>
     </div>
   </div>
