--- a/blogicum/templates/registration/registration_form.html
+++ b/blogicum/templates/registration/registration_form.html
@@ -2,7 +2,7 @@
 {% load django_bootstrap5 %}
 {% block content %}
   <div class="col d-flex justify-content-center">
-    <div class="card" style="width: 40rem;">
+    <div class="card text-bg-warning" style="width: 40rem;">
       <div class="card-header">
         Регистрация пользователя
       </div>
